tests/mm0_mmu/fail/bad-sort2.mmu
(sort s5 provable pure sort)